# listem

./: .env  .gitignore  Cargo.toml  Embryon.md  README.md
database/: listem.db
migrations/2023-10-19-182534_create_todo/: up.sql
migrations/2023-12-04-011349_rename_todos_to_tasks/: up.sql
migrations/2023-12-04-053522_add_timestamps_to_tasks/: up.sql
migrations/2025-03-12-142919_create_todos/: up.sql
src/: api.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  tera_alpha.rs  tests.rs
src/database/: database.rs  listem.db  models.rs  schema.rs
static/: style.css
static/css/: style.css
static/css/lib/: mvp.css
static/js/: data.js  display-completed.js  hide_done.js  modal.js  search.js
templates/: about.html  base.html  base.html.tera  edit-todo-form.html  edit-todo.html  home.html  index.html.tera  nav.html.tera  tasks_loop.html.tera  todo.html  todolist.html
templates/fragments/: base.html.tera  footer.html.tera  nav.html.tera  panel-tabs.html.tera  script.html.tera  search_bar.html.tera  style.html.tera
templates/task/: edit.html.tera  item_checked.html.tera  item_unchecked.html.tera  new_task.html.tera
